--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,7 +6,7 @@
 <StackLayout>
   <Button
     text="auth works!"
-    class="btn btn-primary"
+    class="-primary -rounded-lg"
     (tap)="onSignin()"
   ></Button>
 </StackLayout>
