--- a/src/app/challenges/challenge-edit/challenge-edit.component.html
+++ b/src/app/challenges/challenge-edit/challenge-edit.component.html
@@ -2,8 +2,14 @@
   [title]="isCreating ? 'Replace Challenge' : 'Edit Challenge'"
   [hasMenu]="false"
 ></ns-action-bar>
-<FlexBoxlayout justifyContent="space-between">
-  <!-- <TextField class="form-control" [(ngModel)]="challengeDescrption"></TextField>
-  <Button class="btn" (tap)="onSetChallenge()" text="Add Challenge"></Button> -->
-  <Label text="CurrentEdit!!!"></Label>
+<FlexBoxlayout class="form">
+  <StackLayout class="input-field">
+    <Label class="label" text="Title"></Label>
+    <TextField class="input"></TextField>
+  </StackLayout>
+  <StackLayout class="input-field">
+    <Label class="label" text="Description"></Label>
+    <TextField class="input"></TextField>
+  </StackLayout>
+  <Button class="-primary" text="save"></Button>
 </FlexBoxlayout>
